[gd_scene load_steps=12 format=3 uid="uid://dqt8fnt1l33eu"]

[ext_resource type="Script" uid="uid://dshitaaapbs6x" path="res://source/client/ui/hud/hud.gd" id="1_rchld"]
[ext_resource type="PackedScene" uid="uid://rncsatpcsbm" path="res://source/client/ui/hud/health_bar/health_bar.tscn" id="2_klco5"]
[ext_resource type="PackedScene" uid="uid://cmv168mgurrlp" path="res://source/client/ui/chat/chat_menu.tscn" id="2_xs74v"]
[ext_resource type="PackedScene" uid="uid://gofowwc2uc1h" path="res://source/client/ui/hud/energy_bar/energy_bar.tscn" id="3_energy"]
[ext_resource type="Script" uid="uid://pkprr0ll1y44" path="res://source/client/ui/hud/item_slots.gd" id="4_8qpw0"]
[ext_resource type="Script" uid="uid://brq8mxox5bclj" path="res://source/client/ui/hud/menu_overlay.gd" id="4_cx7qp"]
[ext_resource type="StyleBox" uid="uid://dmt25bssm06ca" path="res://source/client/ui/hud/harvesting/general_panel.tres" id="5_yye8g"]
[ext_resource type="Theme" uid="uid://cf1ayo3dckj67" path="res://source/client/gateway/ui/theme_navy.tres" id="6_qjrur"]
[ext_resource type="Texture2D" uid="uid://1lckma8tgrri" path="res://assets/Raven Fantasy Icons/Separated Files/32x32/fb6.png" id="9_o5bjo"]
[ext_resource type="Texture2D" uid="uid://be5thvqndixxl" path="res://assets/Raven Fantasy Icons/Separated Files/32x32/fb39.png" id="10_s83ae"]
[ext_resource type="Texture2D" uid="uid://wykq6t7doo8e" path="res://assets/Raven Fantasy Icons/Separated Files/32x32/fb14.png" id="11_ntruf"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rchld")

[node name="HealthBar" parent="." instance=ExtResource("2_klco5")]
visible = false

[node name="EnergyBar" parent="." instance=ExtResource("3_energy")]
anchors_preset = -1
offset_left = -360.0
offset_top = -408.35498
offset_right = -360.0
offset_bottom = -408.35498
grow_vertical = 1

[node name="GoldDisplay" type="Panel" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
theme_override_styles/panel = ExtResource("5_yye8g")

[node name="Label" type="Label" parent="GoldDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Gold: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelDisplay" type="Panel" parent="."]
offset_left = 20.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("5_yye8g")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelDisplay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 29.0
grow_horizontal = 2

[node name="LevelLabel" type="Label" parent="LevelDisplay/VBoxContainer"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1

[node name="ExpProgressBar" type="ProgressBar" parent="LevelDisplay/VBoxContainer"]
layout_mode = 2
show_percentage = false

[node name="MenuButton" type="Button" parent="."]
visible = false
offset_left = 885.0
offset_top = 17.0
offset_right = 938.0
offset_bottom = 56.0
theme = ExtResource("6_qjrur")
text = "Menu"

[node name="LevelupButton" type="Button" parent="."]
visible = false
offset_left = 826.0
offset_top = 17.0
offset_right = 879.0
offset_bottom = 56.0
text = "!"

[node name="Control" type="Control" parent="LevelupButton"]
anchors_preset = 0
offset_left = -227.0
offset_top = -3.0
offset_right = -33.0
offset_bottom = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelupButton/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="LevelupButton/Control/VBoxContainer"]
layout_mode = 2
text = "+VIT"

[node name="Button2" type="Button" parent="LevelupButton/Control/VBoxContainer"]
layout_mode = 2
text = "+STR"

[node name="Button3" type="Button" parent="LevelupButton/Control/VBoxContainer"]
layout_mode = 2
text = "+AGI"

[node name="Label" type="Label" parent="LevelupButton/Control/VBoxContainer"]
layout_mode = 2
text = "Available points: 0"

[node name="Label" type="Label" parent="LevelupButton/Control"]
layout_mode = 0
offset_left = -381.0
offset_top = 94.0
offset_right = -156.0
offset_bottom = 275.0

[node name="TestLabel" type="Label" parent="LevelupButton/Control"]
layout_mode = 0
offset_left = -280.926
offset_top = 8.63937
offset_right = -240.926
offset_bottom = 29.6394
text = "Temporary menu
In construction"

[node name="TestLabel2" type="Label" parent="LevelupButton/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 165.0
offset_right = 153.0
offset_bottom = 210.0
text = "Characters stats:
{Attack Damage: 20}"

[node name="Chat" parent="." instance=ExtResource("2_xs74v")]

[node name="ItemSlots" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_8qpw0")

[node name="VBoxContainer" type="VBoxContainer" parent="ItemSlots"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -45.0
offset_right = -20.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ItemSlotButton1" type="Button" parent="ItemSlots/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "1"

[node name="ItemSlotButton2" type="Button" parent="ItemSlots/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "2
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -131.0
offset_top = 40.0
offset_right = -39.0
offset_bottom = 80.0
grow_horizontal = 0
theme_override_constants/separation = 12

[node name="InventoryButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("9_o5bjo")

[node name="CraftingButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("10_s83ae")

[node name="ShopButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="GuildButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("11_ntruf")

[node name="MenuOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_cx7qp")

[node name="ColorRect" type="ColorRect" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.173, 0.173, 0.173, 0.65)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SettingsButton" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="CloseButton" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "CLOSE"

[node name="SubMenu" type="CanvasLayer" parent="."]
layer = 10

[connection signal="pressed" from="MenuButton" to="." method="_on_overlay_menu_button_pressed"]
[connection signal="pressed" from="LevelupButton" to="." method="_on_levelup_button_pressed"]
[connection signal="pressed" from="LevelupButton/Control/VBoxContainer/Button" to="." method="_on_vit_button_pressed"]
[connection signal="pressed" from="LevelupButton/Control/VBoxContainer/Button2" to="." method="_on_button_str_pressed"]
